src/tests/snapshots/hebi__tests__object_load_index__field.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Modules:


# Input:
v := { a: 10 }
print v["a"]


# Result (success):
none

# Stdout:
10


