src/tests/snapshots/hebi__tests__object_load_index__nested_unknown_opt.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Modules:


# Input:
v := { a: {} }
print ?v["a"]["b"]


# Result (success):
none

# Stdout:
none


