src/tests/snapshots/hebi__tests__object_load_index__unknown.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Modules:

            
# Input:
v := {}
print v["a"]


# Result (error):
cannot get field `"a"` on value `{}`

# Stdout:


