src/tests/snapshots/hebi__tests__object_load_index__unknown_opt.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Modules:


# Input:
v := {}
print ?v["a"]


# Result (success):
none

# Stdout:
none


