src/tests/snapshots/hebi__tests__object_load_index__unknown_opt_then_error.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Modules:

            
# Input:
v := {}
print ?v["a"]
print v["a"]


# Result (error):
In code at 0..0
Error: cannot get field `"a"` on value `{}`


# Stdout:
none


